<resources>
    <string name="app_name">calculator</string>
    <string name="input">Input:</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">:</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="delete"><![CDATA[<x]]></string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiply">x</string>
    <string name="substract">-</string>
    <string name="comma">.</string>
    <string name="zero">0</string>
    <string name="clear">c</string>
    <string name="add">+</string>
    <string name="result">=</string>
</resources>